# BPNeuralNetwork

./: .gitignore  :w  BP.c  BP.cpp  BP.h  CMakeLists.txt  GB_SRCS  README.md  TODO.md  conver_cifar.cpp  convert_cifar10.cpp  get_cifar10.sh  main  main.cpp  makefile  numeric.h
BP/: BP.c  BP.h  Matrix.c  Matrix.h  leaklog.txt  log.txt  main  makefile  numeric.c  numeric.h  test.c
BP/C++/: BP.cpp  BP.h  Matrix.cpp  Matrix.h  main  main.cpp  makefile  mn  numeric.cpp
C/: leaklog.txt  makefile  test.c
C++/: BP.h  main  makefile
Data/: CMakeLists.txt  convert_cifar10.cpp
Layers/: CrossEntropy.cpp  CrossEntropy.h  FullyConnected.cpp  FullyConnected.h  Layer.cpp  Layer.h  ReLU.cpp  ReLU.h  Softmax.cpp  Softmax.h  SoftmaxCrossEntropy.cpp  SoftmaxCrossEntropy.h  makefile
Math/: numeric.cpp
Matrix/: Matrix.cpp  Matrix.h  Matrix.h.bak  Matrix.hpp  Matrix2.cpp  Matrix2.hpp  makefile
Optimizer/: Optimizer.cpp  Optimizer.h  SGD.cpp  SGD.h  makefile
Utils/: dataloader.cpp  dataloader.h  makefile
data/: CMakeLists.txt  convert_cifar10.cpp  dataloader.cpp  dataloader.h  utils.cpp  utils.h
utils/: dataloader.cpp  dataloader.h  numeric.h
